deploy-mule-app.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
 name: mule-app-deployment
spec:
 replicas: 2
 selector:
   matchLabels:
     app: mule-app
 template:
   metadata:
     labels:
       app: mule-app
   spec:
     containers:
     - name: mule-app
       image: jdmagnani/mulepocjdm:latest
       ports:
       - containerPort: 8083
       volumeMounts:
       - name: mule-config
         mountPath: /opt/mule/apps
     volumes:
     - name: mule-config
       emptyDir: {}
