setup-mule-service.yaml
apiVersion: v1
kind: Service
metadata:
 name: mule-app-service
spec:
 selector:
   app: mule-app
 ports:
   - protocol: TCP
     port: 80
     targetPort: 8083
 type: LoadBalancer
