app-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
 name: mule-app-ingress
 annotations:
   kubernetes.io/ingress.class: azure/application-gateway
spec:
 rules:
 - host: mule-app.example.com
   http:
     paths:
     - path: /
       pathType: Prefix
       backend:
         service:
           name: mule-app-service
           port:
             number: 80
